# musiclang_predict

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  export.py  main_python_inference.py  pyproject.toml  pyproject.tomli  requirements.txt  setup.py  train.py
.circleci/: config.yml
config/: train_musiclang.py  train_musiclang_char.py
data/musiclang/: prepare.py
data/musiclang_char/: prepare.py  readme.md
musiclang_predict/: __init__.py  chelpers.py  configs.py  constants.py  corpus.py  load_dataset.py  predict.py  predictor.py  prepare.py  prepare_with_tokenizer.py  sample.py  train_utils.py  trainer.py
musiclang_predict.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
musiclang_predict/c/: Makefile  run.c  run.h
musiclang_predict/corpus/: bob_marley_jammin.mid  boney_m_ma_baker.mid
musiclang_predict/predictors/: __init__.py  predict_with_chords.py  transformer.py
musiclang_predict/sampler/: __init__.py  model.py  sample.py
musiclang_predict/tokenizers/: __init__.py  bpe_iterator.py  bpe_tokenizer.py  chord_tokenizer.py  interceptor.py  template_extractor.py  tokenizer.py
tests/: test_tokenizer.py
