[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musiclang-predict"
version = "0.3.0"
description = "A python package for music notation and generation"
readme = "README.md"
authors = [{ name = "Florian GARDIN", email = "fgardin.pro@gmail.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["music", "ai", "notation"]
dependencies = [
        "musiclang==0.21.0",
        "torch",
        "transformers",
        "tokenizers",
        "torchtoolkit",
        "accelerate"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/MusicLang/musiclang_predict"